--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<li><a href="https://leetcode.com/playground/new/empty" target="_blank">LeetCode IDE</a></li>
 					<h3>Courses: </h3>
 					<li><a href="https://www.geeksforgeeks.org/" target="_blank"><img src="images/gfg.png"></a></li>
-					<li><a href="" target="_blank"><img src="images/w3.png"></a></li>
+					<li><a href="https://www.w3schools.com/" target="_blank"><img src="images/w3.png"></a></li>
 					<li><a href="https://www.udemy.com/" target="_blank"><img src="https://www.udemy.com/staticx/udemy/images/v6/logo-coral.svg" width="55" height="55"></a></li>
 					<li><a href="https://www.coursera.org/" target="_blank"><img src="https://d3njjcbhbojbot.cloudfront.net/web/images/favicons/apple-touch-icon-144x144.png" height="48" width="48"></a></li>
 					<li><a href="https://www.scaler.com/edge/" target="_blank"><img src="https://yt3.ggpht.com/a/AATXAJwAcHteNvSNORzzr4WKgvQwP_0R-P0-KnP8k-sn=s100-c-k-c0xffffffff-no-rj-mo" width="48" height="48"></a></li>
