--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 				<li><a href="https://www.hackerrank.com/dashboard" target="_blank"><img src="images/hackerrank.png"></a></li>
 				<li><a href="https://stackoverflow.com/#" target="_blank"><img src="images/stackoverflow.png"></a></li>
 				<li><a href="https://github.com/" target="_blank"><img src="images/github.png"></a></li>
+					
 				</ul>
 			</td>
 			<td>
@@ -71,6 +72,7 @@
 					<li><a href="https://techcrunch.com/" target="_blank"><img src="images/tc.png"></a></li><br>
 					<li><a href="https://content.techgig.com/technology" target="_blank"><img src="images/tg.jpg"></a></li>
 					<li><a href="https://medium.com/" target="_blank"><img src="images/medium.png"></a></li>
+					<li><a href="https://www.freecodecamp.org/news/" target="_blank"><img style="width:49px; height:49px;" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftwitter.com%2Ffreecodecamp&psig=AOvVaw32frDRw0xV7otwB5s2v_wj&ust=1598157258444000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNDvjvD9resCFQAAAAAdAAAAABAD"></a></li>
 				</ul>
 			</td>
 			<td>
