--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<li><a href="https://techcrunch.com/" target="_blank"><img src="images/tc.png"></a></li><br>
 					<li><a href="https://content.techgig.com/technology" target="_blank"><img src="images/tg.jpg"></a></li>
 					<li><a href="https://medium.com/" target="_blank"><img src="images/medium.png"></a></li>
-					<li><a href="https://www.freecodecamp.org/news/" target="_blank"><img style="width:49px; height:49px;" src="https://twitter.com/freeCodeCamp/photo"></a></li>
+					<li><a href="https://www.freecodecamp.org/news/" target="_blank"><img style="width:49px; height:49px;" alt="FreeCodeCamp" src="https://twitter.com/freeCodeCamp/photo"></a></li>
 				</ul>
 			</td>
 			<td>
