--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
 					<li><a href="https://developer.mozilla.org/en-US/" target="_blank">MDN</a></li><br>
 					<li><a href="https://devdocs.io/" target="_blank">Developer Doc</a></li><br>
 					<li><a href="https://resizeimage.net/" target="_blank">Image Resize</a></li><br>
+					<li><a href="https://cssbuttongenerator.com/" target="_blank">Button Generator</a></li><br>
+					<li><a href="https://loremipsum.io/" target="_blank">Lorem Ipsum</a></li><br>
+					<li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/color_value" target="_blank">Color Palette</a></li><br>
+					<li><a href="https://colorhunt.co/" target="_blank">Color Hunt</a></li><br>
+					<li><a href="https://getbootstrap.com/docs/4.0/examples/" target="_blank">Bootstrap Examples</a></li><br>
 				</ul>
 			</td>
 			<td>
