--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>My Diary</title>
-	<link rel="icon" href="images/My Pic.jpg">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<table cellspacing="50">
@@ -29,33 +29,32 @@
 		<tr>
 			<td>
 				<h3>Social: </h3>
-				<ul>
+				<ol>
 					<li><a href="https://www.linkedin.com/in/thisisankitsrivastava/" target="_blank"><img src="images/linkedin.jpg"></a></li>
 				<li><a href="https://www.instagram.com/thisisankitsrivastava" target="_blank"><img src="images/instagram.jpg"></a></li>
 				<li><a href="https://www.youtube.com/channel/UCxDB-7XTe1yCHVPQ6BUttIw?sub_confirmation=1" target="_blank"><img src="images/youtube.png"></a></li>
 				<li><a href="https://www.hackerrank.com/dashboard" target="_blank"><img src="images/hackerrank.png"></a></li>
 				<li><a href="https://stackoverflow.com/#" target="_blank"><img src="images/stackoverflow.png"></a></li>
 				<li><a href="https://github.com/" target="_blank"><img src="images/github.png"></a></li>
-					
-				</ul>
+				</ol>
 			</td>
 			<td>
-				<ul><h3>CP: </h3>
+				<ol><h3>CP: </h3>
 					<li><a href="https://www.geeksforgeeks.org/top-algorithms-and-data-structures-for-competitive-programming/" target="_blank"> Top 10 DSA</a></li>
 					<li><a href="https://ide.geeksforgeeks.org/" target="_blank">GFG IDE</a></li>
 					<li><a href="https://leetcode.com/playground/new/empty" target="_blank">LeetCode IDE</a></li>
 					<h3>Courses: </h3>
 					<li><a href="https://www.geeksforgeeks.org/" target="_blank"><img src="images/gfg.png"></a></li>
-					<li><a href="https://www.w3schools.com/" target="_blank"><img src="images/w3.png"></a></li>
+					<li><a href="" target="_blank"><img src="images/w3.png"></a></li>
 					<li><a href="https://www.udemy.com/" target="_blank"><img src="https://www.udemy.com/staticx/udemy/images/v6/logo-coral.svg" width="55" height="55"></a></li>
 					<li><a href="https://www.coursera.org/" target="_blank"><img src="https://d3njjcbhbojbot.cloudfront.net/web/images/favicons/apple-touch-icon-144x144.png" height="48" width="48"></a></li>
 					<li><a href="https://www.scaler.com/edge/" target="_blank"><img src="https://yt3.ggpht.com/a/AATXAJwAcHteNvSNORzzr4WKgvQwP_0R-P0-KnP8k-sn=s100-c-k-c0xffffffff-no-rj-mo" width="48" height="48"></a></li>
 					<h3>Puzzle: </h3>
 					<li><a href="https://gurmeet.net/" target="_blank">Gurmeet Puzzles</a></li>
-				</ul>
+				</ol>
 			</td>
 			<td>
-				<ul>
+				<ol>
 					<li><a href="https://gateoverflow.in/blog/10132/never-go-a-day-without-go-air-202" target="_blank">Scorer Experience</a></li><br>
 					<li><a href="https://www.quora.com/What-was-your-3-hour-strategy-for-the-GATE-CSE-2020-exam" target="_blank">3Hr Startegy</a></li><br>
 					<li><a href="https://gatecse.in/gate-cse-2016-syllabus/" target="_blank">CS Syllabus</a></li><br>
@@ -65,38 +64,32 @@
 					<li><a href="https://gatecse.in/gate-subjects/" target="_blank">Subjects</a></li><br>
 					<li><a href="https://m.mediafire.com/gp6z7khjzyl8d" target="_blank">Study Material</a></li><br>
 					<li><a href="https://drive.google.com/drive/u/0/folders/15KSAzO6l7CAfdFNWvjhI3GUM0nbtxpdN" target="_blank">Notes</a></li><br>
-				</ul>
+				</ol>
 			</td>
 			<td>
-				<ul>
+				<ol>
 					<li><a href="https://techcrunch.com/" target="_blank"><img src="images/tc.png"></a></li><br>
 					<li><a href="https://content.techgig.com/technology" target="_blank"><img src="images/tg.jpg"></a></li>
 					<li><a href="https://medium.com/" target="_blank"><img src="images/medium.png"></a></li>
-					<li><a href="https://www.freecodecamp.org/news/" target="_blank"><img style="width:49px; height:49px;" alt="FreeCodeCamp" src="https://twitter.com/freeCodeCamp/photo"></a></li>
-				</ul>
+				</ol>
 			</td>
 			<td>
-				<ul>
+				<ol>
 					<li><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/learn/lecture/12287482?start=0#announcements" target="_blank">Bootcamp Course</a></li><br>
 					<li><a href="https://www.appbrewery.co/p/web-development-course-resources/" target="_blank">Course Resource</a></li><br>
 					<li><a href="https://codepen.io/pen/?__cf_chl_jschl_tk__=3ed98dc4f291d62b1f05beb0e402c8519ebf6797-1596548230-0-AXUegdpt1Y0f5-D3uAo936yTRLzP70fUcez-24s4mFuOyr-9nGcMHdAymWnhhDHXNunNFylXk0hJqZAp_3LBglZVP1YLG1I1xX1f0rvd82MGaccqqCVnv3TxTdgDYry3Jw2Iw8RQrXp7OdLvW8py30_RuauO87zaht8vzX95HlkBungwHIaY8mOKyrJmeRD6O_CGuNQ7NTAyEVLOQ6UlisNPnO8MLtdk402pIUeuUkLt3wfwFab0LYiUyRS3O3iQ-5EFRtvwuq_Uj5Obrru4RjW61m19UR6WmC7X73iYWgflYkM1a8dhb-s3mSdxLsXzBnxhbMUGDm73t7IcLLWb49U" target="_blank">Code Pen Live</a></li><br>
 					<li><a href="https://developer.mozilla.org/en-US/" target="_blank">MDN</a></li><br>
 					<li><a href="https://devdocs.io/" target="_blank">Developer Doc</a></li><br>
 					<li><a href="https://resizeimage.net/" target="_blank">Image Resize</a></li><br>
-					<li><a href="https://cssbuttongenerator.com/" target="_blank">Button Generator</a></li><br>
-					<li><a href="https://loremipsum.io/" target="_blank">Lorem Ipsum</a></li><br>
-					<li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/color_value" target="_blank">Color Palette</a></li><br>
-					<li><a href="https://colorhunt.co/" target="_blank">Color Hunt</a></li><br>
-					<li><a href="https://getbootstrap.com/docs/4.0/examples/" target="_blank">Bootstrap Examples</a></li><br>
-				</ul>
+				</ol>
 			</td>
 			<td>
-				<ul>
+				<ol>
 					<li><a href="https://www.google.com/search?q=cin.ignore(numeric_limits%3Cstreamsize%3E%3A%3Amax()%2C+%27%5Cn%27)%3B&rlz=1C1CHBF_enIN792IN795&oq=cin.ignore(numeric_limits%3Cstreamsize%3E%3A%3Amax()%2C+%27%5Cn%27)%3B&aqs=chrome..69i57.414j0j7&sourceid=chrome&ie=UTF-8" target="_blank">cin in HR</a></li><br>
 					<li><a href="https://www.codechef.com/problems/HS08TEST" target="_blank">ATM Code Chef</a></li><br>
 					<li><a href="https://nationalolympiad.org/neo/about.php" target="_blank">CS Olympiad</a></li><br>
 					<li><a href="https://medium.com/@andreimargeloiu/how-to-prepare-for-competitive-programming-396d557e0c12" target="_blank">CP Prep</a></li><br>
-				</ul>
+				</ol>
 			</td>
 		</tr>
 	</table>
